--- a/django_variables.env
+++ b/django_variables.env
@@ -1,2 +1,5 @@
 SECRET_KEY="=288f-)6y9s+i(mikl61wd&2y1+ubker71wli0e(5*dar$=(gv"
 DEBUG=1
+POSTGRES_PASSWORD=postgres
+POSTGRES_USER=postgres
+POSTGRES_DB=polls_api_db
